--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
   "name": "portfolio-frontend",
   "version": "1.0.0",
+  "description": "This is the React frontend for my portfolio project.",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "axios": "^1.12.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.0",
     "vite": "^5.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/swagath088/portfolio-frontend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/swagath088/portfolio-frontend/issues"
+  },
+  "homepage": "https://github.com/swagath088/portfolio-frontend#readme",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module"
 }
